# NBodySimulation

./: .gitignore  Analyser.cpp  Analyser.h  CMakeLists.txt  CalcAcc.cpp  CalcAcc.h  PlummerSphereIC.cpp  PlummerSphereIC.h  main.cpp
